# FF_OCAML

./: dune-project  fortissimo.opam
_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/.aliases/default/frontend/: all-00000000000000000000000000000000
_build/.aliases/default/frontend/parsing/: all-00000000000000000000000000000000
_build/.aliases/default/src/: all-00000000000000000000000000000000
_build/.aliases/default/src/frontend/: all-00000000000000000000000000000000
_build/default/: .merlin  dune  dune-project  fortissimo.dune-package  fortissimo.install  fortissimo.ml  fortissimo.opam
_build/default/.fortissimo.eobjs/: fortissimo.ml.d
_build/default/.fortissimo.eobjs/byte/: dune__exe__Fortissimo.cmi  dune__exe__Fortissimo.cmo  dune__exe__Fortissimo.cmt
_build/default/.fortissimo.eobjs/native/: dune__exe__Fortissimo.cmx
_build/default/frontend/parsing/: ast_types.ml  ast_types.mli  lexer.ml  lexer.mll  parser.mly
_build/default/src/: lib.ml-gen
_build/default/src/.lib.objs/: ast_types.mli.d  parsed_ast.ml.d  parsed_ast.mli.d
_build/default/src/.lib.objs/byte/: lib.cmi  lib.cmo  lib.cmt  lib__Ast_types.cmi  lib__Ast_types.cmti
_build/default/src/.lib.objs/native/: lib.cmx
_build/default/src/frontend/ast/: ast_types.mli
_build/default/src/frontend/parsing/: dune  lexer.ml  lexer.mll  parser.mly  (+1 more)
fortissimo/lib/: dune
fortissimo/test/: dune
frontend/parsing/: dune  parsed_ast.ml
src/: .merlin  dune
src/frontend/ast/: ast_types.ml  dune
src/frontend/parsing/: dune  parsed_ast.mli
(+4 files in other folders)
