opam-version: "2.0.5"
synopsis: "A gradually typed web procedural web language"
version: "0.1"
maintainer: "johng.kathe@gmail.com"
authors: ["John G. Kathe"]
homepage: "https://github.com/johngkathe/FF_OCAML"
bug-reports: "https://github.com/johngkathe/FF_OCAML/issues"
dev-repo: "git+https://github.com/johngkathe/FF_OCAML.git"
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
